--- a/css/backoffice/components/dashlet/_dashlet-badge.scss
+++ b/css/backoffice/components/dashlet/_dashlet-badge.scss
@@ -22,14 +22,15 @@ $ibo-dashlet-badge--action-icon--margin-right: 6px !default;
 
 /* Rules */
 .ibo-dashlet-badge{
-	//min-width: $ibo-dashlet-badge--min-width;
-	flex-basis: $ibo-dashlet-badge--min-width;
-	flex-grow: 1;
-	flex-shrink: 1;
-	padding: $ibo-dashlet-badge--padding-y $ibo-dashlet-badge--padding-x;
-	background-color: $ibo-dashlet-badge--background-color;
-	border: $ibo-dashlet-badge--border;
-	border-radius: $ibo-dashlet-badge--border-radius;
+  //min-width: $ibo-dashlet-badge--min-width;
+  flex-basis: $ibo-dashlet-badge--min-width;
+  flex-grow: 1;
+  flex-shrink: 1;
+  padding: $ibo-dashlet-badge--padding-y $ibo-dashlet-badge--padding-x;
+  background-color: $ibo-dashlet-badge--background-color;
+  border: $ibo-dashlet-badge--border;
+  border-radius: $ibo-dashlet-badge--border-radius;
+  cursor: pointer;
 }
 .ibo-dashlet-badge--body{
 	display: flex;
